# data-engineering

./: README.MD  passenger.sql  passenger_class.sql  pyproject.toml
Python/: EDA_on_titanic_flat_file_analysis.ipynb
SQL/: SQL_analysis_on_the_titanic_dataset.sql  cabin.sql  embarked.sql  passenger.sql  passenger_class.sql  payments.sql  survival.sql
notebooks/: EDA_on_titanic_flat_file_analysis.ipynb
postgres-normalisation-analysis-of-titanic-data/: Python_EDA_on_titanic_dataset.html  python_EDA_on_titanic_data.md  step_by_step_walk_through.html  step_by_step_walk_through.md
python/: titanic.py
transformed_files/: titanic_normalized_data.csv
